parser2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    Comment
    reserved

Grammar

Rule 0     S' -> program
Rule 1     program -> list
Rule 2     numOrLetter -> Num
Rule 3     numOrLetter -> Letter
Rule 4     numOrLetter -> numOrLetter
Rule 5     numOrLetter -> <empty>
Rule 6     list -> list declaration
Rule 7     list -> declaration
Rule 8     declaration -> function
Rule 9     declaration -> varDeclaration
Rule 10    varDeclaration -> type variableList Semicolon
Rule 11    ScopedVariableDec -> scopedSpecifier variableList Semicolon
Rule 12    variableList -> variableList Comma varInitialization
Rule 13    variableList -> varInitialization
Rule 14    varInitialization -> varForm
Rule 15    varInitialization -> varForm Colon Opening_Parentheses eachExpression Closing_Parentheses
Rule 16    varForm -> Letter numOrLetter Opening_Bracket Num Closing_Bracket
Rule 17    varForm -> Letter numOrLetter
Rule 18    scopedSpecifier -> Static_KW type
Rule 19    scopedSpecifier -> type
Rule 20    type -> Boolean_KW
Rule 21    type -> Character_KW
Rule 22    type -> Integer_KW
Rule 23    type -> char_KW
Rule 24    type -> bool_KW
Rule 25    type -> int_KW
Rule 26    function -> void_KW numOrLetter Opening_Parentheses parameter Closing_Parentheses Opening_Bracket statement Closing_Bracket
Rule 27    function -> type Letter numOrLetter Opening_Parentheses parameter Closing_Parentheses statement
Rule 28    parameter -> listOfParameters
Rule 29    parameter -> <empty>
Rule 30    listOfParameters -> listOfParameters Semicolon paramTypeList
Rule 31    listOfParameters -> paramTypeList
Rule 32    paramTypeList -> type paramList
Rule 33    paramList -> paramList Comma paramId
Rule 34    paramList -> paramId
Rule 35    localDeclarations -> localDeclarations ScopedVariableDec
Rule 36    localDeclarations -> <empty>
Rule 37    paramId -> Letter numOrLetter
Rule 38    paramId -> Letter numOrLetter Opening_Bracket Closing_Bracket
Rule 39    statement -> phrase
Rule 40    statement -> compoundPhrase
Rule 41    statement -> selectPhrase
Rule 42    statement -> iterationPhrase
Rule 43    statement -> returnPhrase
Rule 44    statement -> continue
Rule 45    compoundPhrase -> Opening_Brace localDeclarations statementList Closing_Brace
Rule 46    statementList -> statementList statement
Rule 47    statementList -> <empty>
Rule 48    phrase -> allExpression Semicolon
Rule 49    phrase -> Semicolon
Rule 50    selectPhrase -> If_KW Opening_Parentheses eachExpression Closing_Parentheses ifBody
Rule 51    selectPhrase -> If_KW Opening_Parentheses eachExpression Closing_Parentheses Opening_Brace ifBody ifBody Closing_Brace
Rule 52    ifBody -> statement
Rule 53    ifBody -> statement Other_KW statement
Rule 54    ifBody -> Semicolon
Rule 55    iterationPhrase -> Till_KW Opening_Parentheses eachExpression Closing_Parentheses statement
Rule 56    returnPhrase -> ComeBack_KW Semicolon
Rule 57    returnPhrase -> GiveBack_KW allExpression Semicolon
Rule 58    returnPhrase -> GiveBack_KW numOrLetter Semicolon
Rule 59    continue -> Continue_KW Semicolon
Rule 60    allExpression -> alterable mathOp allExpression
Rule 61    allExpression -> alterable PP
Rule 62    allExpression -> alterable MM
Rule 63    allExpression -> eachExpression
Rule 64    allExpression -> alterable mathOp alterable
Rule 65    mathOp -> Equal
Rule 66    mathOp -> PlusEqual
Rule 67    mathOp -> MinusEqual
Rule 68    mathOp -> TimesEqual
Rule 69    mathOp -> DivideEqual
Rule 70    eachExpression -> eachExpression logicOp eachExpression
Rule 71    eachExpression -> eachExpression logicOp Then_KW eachExpression
Rule 72    eachExpression -> logicOp eachExpression
Rule 73    eachExpression -> relExpression
Rule 74    eachExpression -> eachExpression logicOp Else_KW eachExpression
Rule 75    relExpression -> mathEXP compareType mathEXP
Rule 76    relExpression -> mathEXP
Rule 77    compareType -> equal
Rule 78    compareType -> nonEqual
Rule 79    equal -> LEqual
Rule 80    equal -> GEqual
Rule 81    equal -> EEqual
Rule 82    nonEqual -> GreaterOP
Rule 83    nonEqual -> LessOP
Rule 84    nonEqual -> NonEqualOP
Rule 85    mathEXP -> mathEXP op mathEXP
Rule 86    mathEXP -> unaryExpression
Rule 87    op -> Plus
Rule 88    op -> Minus
Rule 89    op -> Times
Rule 90    op -> Divide
Rule 91    op -> ModeOP
Rule 92    unaryExpression -> unaryop unaryExpression
Rule 93    unaryExpression -> factor
Rule 94    unaryop -> Minus
Rule 95    unaryop -> Times
Rule 96    unaryop -> QMark
Rule 97    factor -> inalterable
Rule 98    factor -> alterable
Rule 99    alterable -> Letter numOrLetter
Rule 100   alterable -> alterable Opening_Bracket allExpression Closing_Bracket
Rule 101   alterable -> alterable Letter numOrLetter
Rule 102   inalterable -> Opening_Parentheses allExpression Closing_Parentheses
Rule 103   inalterable -> constant
Rule 104   inalterable -> Letter numOrLetter Opening_Parentheses args Closing_Parentheses
Rule 105   args -> arguments
Rule 106   args -> <empty>
Rule 107   arguments -> arguments Comma allExpression
Rule 108   arguments -> allExpression
Rule 109   constant -> Const_KW
Rule 110   constant -> True_KW
Rule 111   constant -> False_KW
Rule 112   logicOp -> DoubleAnd
Rule 113   logicOp -> DoubleOr
Rule 114   logicOp -> Tilda
Rule 115   logicOp -> And
Rule 116   logicOp -> Or

Terminals, with rules where they appear

And                  : 115
Boolean_KW           : 20
Character_KW         : 21
Closing_Brace        : 45 51
Closing_Bracket      : 16 26 38 100
Closing_Parentheses  : 15 26 27 50 51 55 102 104
Colon                : 15
ComeBack_KW          : 56
Comma                : 12 33 107
Comment              : 
Const_KW             : 109
Continue_KW          : 59
Divide               : 90
DivideEqual          : 69
DoubleAnd            : 112
DoubleOr             : 113
EEqual               : 81
Else_KW              : 74
Equal                : 65
False_KW             : 111
GEqual               : 80
GiveBack_KW          : 57 58
GreaterOP            : 82
If_KW                : 50 51
Integer_KW           : 22
LEqual               : 79
LessOP               : 83
Letter               : 3 16 17 27 37 38 99 101 104
MM                   : 62
Minus                : 88 94
MinusEqual           : 67
ModeOP               : 91
NonEqualOP           : 84
Num                  : 2 16
Opening_Brace        : 45 51
Opening_Bracket      : 16 26 38 100
Opening_Parentheses  : 15 26 27 50 51 55 102 104
Or                   : 116
Other_KW             : 53
PP                   : 61
Plus                 : 87
PlusEqual            : 66
QMark                : 96
Semicolon            : 10 11 30 48 49 54 56 57 58 59
Static_KW            : 18
Then_KW              : 71
Tilda                : 114
Till_KW              : 55
Times                : 89 95
TimesEqual           : 68
True_KW              : 110
bool_KW              : 24
char_KW              : 23
error                : 
int_KW               : 25
reserved             : 
void_KW              : 26

Nonterminals, with rules where they appear

ScopedVariableDec    : 35
allExpression        : 48 57 60 100 102 107 108
alterable            : 60 61 62 64 64 98 100 101
args                 : 104
arguments            : 105 107
compareType          : 75
compoundPhrase       : 40
constant             : 103
continue             : 44
declaration          : 6 7
eachExpression       : 15 50 51 55 63 70 70 71 71 72 74 74
equal                : 77
factor               : 93
function             : 8
ifBody               : 50 51 51
inalterable          : 97
iterationPhrase      : 42
list                 : 1 6
listOfParameters     : 28 30
localDeclarations    : 35 45
logicOp              : 70 71 72 74
mathEXP              : 75 75 76 85 85
mathOp               : 60 64
nonEqual             : 78
numOrLetter          : 4 16 17 26 27 37 38 58 99 101 104
op                   : 85
paramId              : 33 34
paramList            : 32 33
paramTypeList        : 30 31
parameter            : 26 27
phrase               : 39
program              : 0
relExpression        : 73
returnPhrase         : 43
scopedSpecifier      : 11
selectPhrase         : 41
statement            : 26 27 46 52 53 53 55
statementList        : 45 46
type                 : 10 18 19 27 32
unaryExpression      : 86 92
unaryop              : 92
varDeclaration       : 9
varForm              : 14 15
varInitialization    : 12 13
variableList         : 10 11 12

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . list
    (6) list -> . list declaration
    (7) list -> . declaration
    (8) declaration -> . function
    (9) declaration -> . varDeclaration
    (26) function -> . void_KW numOrLetter Opening_Parentheses parameter Closing_Parentheses Opening_Bracket statement Closing_Bracket
    (27) function -> . type Letter numOrLetter Opening_Parentheses parameter Closing_Parentheses statement
    (10) varDeclaration -> . type variableList Semicolon
    (20) type -> . Boolean_KW
    (21) type -> . Character_KW
    (22) type -> . Integer_KW
    (23) type -> . char_KW
    (24) type -> . bool_KW
    (25) type -> . int_KW

    void_KW         shift and go to state 6
    Boolean_KW      shift and go to state 8
    Character_KW    shift and go to state 9
    Integer_KW      shift and go to state 10
    char_KW         shift and go to state 11
    bool_KW         shift and go to state 12
    int_KW          shift and go to state 13

    program                        shift and go to state 1
    list                           shift and go to state 2
    declaration                    shift and go to state 3
    function                       shift and go to state 4
    varDeclaration                 shift and go to state 5
    type                           shift and go to state 7

state 1

    (0) S' -> program .



state 2

    (1) program -> list .
    (6) list -> list . declaration
    (8) declaration -> . function
    (9) declaration -> . varDeclaration
    (26) function -> . void_KW numOrLetter Opening_Parentheses parameter Closing_Parentheses Opening_Bracket statement Closing_Bracket
    (27) function -> . type Letter numOrLetter Opening_Parentheses parameter Closing_Parentheses statement
    (10) varDeclaration -> . type variableList Semicolon
    (20) type -> . Boolean_KW
    (21) type -> . Character_KW
    (22) type -> . Integer_KW
    (23) type -> . char_KW
    (24) type -> . bool_KW
    (25) type -> . int_KW

    $end            reduce using rule 1 (program -> list .)
    void_KW         shift and go to state 6
    Boolean_KW      shift and go to state 8
    Character_KW    shift and go to state 9
    Integer_KW      shift and go to state 10
    char_KW         shift and go to state 11
    bool_KW         shift and go to state 12
    int_KW          shift and go to state 13

    declaration                    shift and go to state 14
    function                       shift and go to state 4
    varDeclaration                 shift and go to state 5
    type                           shift and go to state 7

state 3

    (7) list -> declaration .

    void_KW         reduce using rule 7 (list -> declaration .)
    Boolean_KW      reduce using rule 7 (list -> declaration .)
    Character_KW    reduce using rule 7 (list -> declaration .)
    Integer_KW      reduce using rule 7 (list -> declaration .)
    char_KW         reduce using rule 7 (list -> declaration .)
    bool_KW         reduce using rule 7 (list -> declaration .)
    int_KW          reduce using rule 7 (list -> declaration .)
    $end            reduce using rule 7 (list -> declaration .)


state 4

    (8) declaration -> function .

    void_KW         reduce using rule 8 (declaration -> function .)
    Boolean_KW      reduce using rule 8 (declaration -> function .)
    Character_KW    reduce using rule 8 (declaration -> function .)
    Integer_KW      reduce using rule 8 (declaration -> function .)
    char_KW         reduce using rule 8 (declaration -> function .)
    bool_KW         reduce using rule 8 (declaration -> function .)
    int_KW          reduce using rule 8 (declaration -> function .)
    $end            reduce using rule 8 (declaration -> function .)


state 5

    (9) declaration -> varDeclaration .

    void_KW         reduce using rule 9 (declaration -> varDeclaration .)
    Boolean_KW      reduce using rule 9 (declaration -> varDeclaration .)
    Character_KW    reduce using rule 9 (declaration -> varDeclaration .)
    Integer_KW      reduce using rule 9 (declaration -> varDeclaration .)
    char_KW         reduce using rule 9 (declaration -> varDeclaration .)
    bool_KW         reduce using rule 9 (declaration -> varDeclaration .)
    int_KW          reduce using rule 9 (declaration -> varDeclaration .)
    $end            reduce using rule 9 (declaration -> varDeclaration .)


state 6

    (26) function -> void_KW . numOrLetter Opening_Parentheses parameter Closing_Parentheses Opening_Bracket statement Closing_Bracket
    (2) numOrLetter -> . Num
    (3) numOrLetter -> . Letter
    (4) numOrLetter -> . numOrLetter
    (5) numOrLetter -> .

    Num             shift and go to state 16
    Letter          shift and go to state 17
    Opening_Parentheses reduce using rule 5 (numOrLetter -> .)

    numOrLetter                    shift and go to state 15

state 7

    (27) function -> type . Letter numOrLetter Opening_Parentheses parameter Closing_Parentheses statement
    (10) varDeclaration -> type . variableList Semicolon
    (12) variableList -> . variableList Comma varInitialization
    (13) variableList -> . varInitialization
    (14) varInitialization -> . varForm
    (15) varInitialization -> . varForm Colon Opening_Parentheses eachExpression Closing_Parentheses
    (16) varForm -> . Letter numOrLetter Opening_Bracket Num Closing_Bracket
    (17) varForm -> . Letter numOrLetter

    Letter          shift and go to state 18

    variableList                   shift and go to state 19
    varInitialization              shift and go to state 20
    varForm                        shift and go to state 21

state 8

    (20) type -> Boolean_KW .

    Letter          reduce using rule 20 (type -> Boolean_KW .)


state 9

    (21) type -> Character_KW .

    Letter          reduce using rule 21 (type -> Character_KW .)


state 10

    (22) type -> Integer_KW .

    Letter          reduce using rule 22 (type -> Integer_KW .)


state 11

    (23) type -> char_KW .

    Letter          reduce using rule 23 (type -> char_KW .)


state 12

    (24) type -> bool_KW .

    Letter          reduce using rule 24 (type -> bool_KW .)


state 13

    (25) type -> int_KW .

    Letter          reduce using rule 25 (type -> int_KW .)


state 14

    (6) list -> list declaration .

    void_KW         reduce using rule 6 (list -> list declaration .)
    Boolean_KW      reduce using rule 6 (list -> list declaration .)
    Character_KW    reduce using rule 6 (list -> list declaration .)
    Integer_KW      reduce using rule 6 (list -> list declaration .)
    char_KW         reduce using rule 6 (list -> list declaration .)
    bool_KW         reduce using rule 6 (list -> list declaration .)
    int_KW          reduce using rule 6 (list -> list declaration .)
    $end            reduce using rule 6 (list -> list declaration .)


state 15

    (26) function -> void_KW numOrLetter . Opening_Parentheses parameter Closing_Parentheses Opening_Bracket statement Closing_Bracket
    (4) numOrLetter -> numOrLetter .

  ! shift/reduce conflict for Opening_Parentheses resolved as shift
    Opening_Parentheses shift and go to state 22

  ! Opening_Parentheses [ reduce using rule 4 (numOrLetter -> numOrLetter .) ]


state 16

    (2) numOrLetter -> Num .

    Opening_Parentheses reduce using rule 2 (numOrLetter -> Num .)
    Opening_Bracket reduce using rule 2 (numOrLetter -> Num .)
    Colon           reduce using rule 2 (numOrLetter -> Num .)
    Semicolon       reduce using rule 2 (numOrLetter -> Num .)
    Comma           reduce using rule 2 (numOrLetter -> Num .)
    Closing_Parentheses reduce using rule 2 (numOrLetter -> Num .)
    Letter          reduce using rule 2 (numOrLetter -> Num .)
    Plus            reduce using rule 2 (numOrLetter -> Num .)
    Minus           reduce using rule 2 (numOrLetter -> Num .)
    Times           reduce using rule 2 (numOrLetter -> Num .)
    Divide          reduce using rule 2 (numOrLetter -> Num .)
    ModeOP          reduce using rule 2 (numOrLetter -> Num .)
    LEqual          reduce using rule 2 (numOrLetter -> Num .)
    GEqual          reduce using rule 2 (numOrLetter -> Num .)
    EEqual          reduce using rule 2 (numOrLetter -> Num .)
    GreaterOP       reduce using rule 2 (numOrLetter -> Num .)
    LessOP          reduce using rule 2 (numOrLetter -> Num .)
    NonEqualOP      reduce using rule 2 (numOrLetter -> Num .)
    DoubleAnd       reduce using rule 2 (numOrLetter -> Num .)
    DoubleOr        reduce using rule 2 (numOrLetter -> Num .)
    Tilda           reduce using rule 2 (numOrLetter -> Num .)
    And             reduce using rule 2 (numOrLetter -> Num .)
    Or              reduce using rule 2 (numOrLetter -> Num .)
    Closing_Bracket reduce using rule 2 (numOrLetter -> Num .)
    PP              reduce using rule 2 (numOrLetter -> Num .)
    MM              reduce using rule 2 (numOrLetter -> Num .)
    Equal           reduce using rule 2 (numOrLetter -> Num .)
    PlusEqual       reduce using rule 2 (numOrLetter -> Num .)
    MinusEqual      reduce using rule 2 (numOrLetter -> Num .)
    TimesEqual      reduce using rule 2 (numOrLetter -> Num .)
    DivideEqual     reduce using rule 2 (numOrLetter -> Num .)


state 17

    (3) numOrLetter -> Letter .

    Opening_Parentheses reduce using rule 3 (numOrLetter -> Letter .)
    Opening_Bracket reduce using rule 3 (numOrLetter -> Letter .)
    Colon           reduce using rule 3 (numOrLetter -> Letter .)
    Semicolon       reduce using rule 3 (numOrLetter -> Letter .)
    Comma           reduce using rule 3 (numOrLetter -> Letter .)
    Closing_Parentheses reduce using rule 3 (numOrLetter -> Letter .)
    Letter          reduce using rule 3 (numOrLetter -> Letter .)
    Plus            reduce using rule 3 (numOrLetter -> Letter .)
    Minus           reduce using rule 3 (numOrLetter -> Letter .)
    Times           reduce using rule 3 (numOrLetter -> Letter .)
    Divide          reduce using rule 3 (numOrLetter -> Letter .)
    ModeOP          reduce using rule 3 (numOrLetter -> Letter .)
    LEqual          reduce using rule 3 (numOrLetter -> Letter .)
    GEqual          reduce using rule 3 (numOrLetter -> Letter .)
    EEqual          reduce using rule 3 (numOrLetter -> Letter .)
    GreaterOP       reduce using rule 3 (numOrLetter -> Letter .)
    LessOP          reduce using rule 3 (numOrLetter -> Letter .)
    NonEqualOP      reduce using rule 3 (numOrLetter -> Letter .)
    DoubleAnd       reduce using rule 3 (numOrLetter -> Letter .)
    DoubleOr        reduce using rule 3 (numOrLetter -> Letter .)
    Tilda           reduce using rule 3 (numOrLetter -> Letter .)
    And             reduce using rule 3 (numOrLetter -> Letter .)
    Or              reduce using rule 3 (numOrLetter -> Letter .)
    Closing_Bracket reduce using rule 3 (numOrLetter -> Letter .)
    PP              reduce using rule 3 (numOrLetter -> Letter .)
    MM              reduce using rule 3 (numOrLetter -> Letter .)
    Equal           reduce using rule 3 (numOrLetter -> Letter .)
    PlusEqual       reduce using rule 3 (numOrLetter -> Letter .)
    MinusEqual      reduce using rule 3 (numOrLetter -> Letter .)
    TimesEqual      reduce using rule 3 (numOrLetter -> Letter .)
    DivideEqual     reduce using rule 3 (numOrLetter -> Letter .)


state 18

    (27) function -> type Letter . numOrLetter Opening_Parentheses parameter Closing_Parentheses statement
    (16) varForm -> Letter . numOrLetter Opening_Bracket Num Closing_Bracket
    (17) varForm -> Letter . numOrLetter
    (2) numOrLetter -> . Num
    (3) numOrLetter -> . Letter
    (4) numOrLetter -> . numOrLetter
    (5) numOrLetter -> .

    Num             shift and go to state 16
    Letter          shift and go to state 17
    Opening_Parentheses reduce using rule 5 (numOrLetter -> .)
    Opening_Bracket reduce using rule 5 (numOrLetter -> .)
    Colon           reduce using rule 5 (numOrLetter -> .)
    Semicolon       reduce using rule 5 (numOrLetter -> .)
    Comma           reduce using rule 5 (numOrLetter -> .)

    numOrLetter                    shift and go to state 23

state 19

    (10) varDeclaration -> type variableList . Semicolon
    (12) variableList -> variableList . Comma varInitialization

    Semicolon       shift and go to state 24
    Comma           shift and go to state 25


state 20

    (13) variableList -> varInitialization .

    Semicolon       reduce using rule 13 (variableList -> varInitialization .)
    Comma           reduce using rule 13 (variableList -> varInitialization .)


state 21

    (14) varInitialization -> varForm .
    (15) varInitialization -> varForm . Colon Opening_Parentheses eachExpression Closing_Parentheses

    Semicolon       reduce using rule 14 (varInitialization -> varForm .)
    Comma           reduce using rule 14 (varInitialization -> varForm .)
    Colon           shift and go to state 26


state 22

    (26) function -> void_KW numOrLetter Opening_Parentheses . parameter Closing_Parentheses Opening_Bracket statement Closing_Bracket
    (28) parameter -> . listOfParameters
    (29) parameter -> .
    (30) listOfParameters -> . listOfParameters Semicolon paramTypeList
    (31) listOfParameters -> . paramTypeList
    (32) paramTypeList -> . type paramList
    (20) type -> . Boolean_KW
    (21) type -> . Character_KW
    (22) type -> . Integer_KW
    (23) type -> . char_KW
    (24) type -> . bool_KW
    (25) type -> . int_KW

    Closing_Parentheses reduce using rule 29 (parameter -> .)
    Boolean_KW      shift and go to state 8
    Character_KW    shift and go to state 9
    Integer_KW      shift and go to state 10
    char_KW         shift and go to state 11
    bool_KW         shift and go to state 12
    int_KW          shift and go to state 13

    parameter                      shift and go to state 27
    listOfParameters               shift and go to state 28
    paramTypeList                  shift and go to state 29
    type                           shift and go to state 30

state 23

    (27) function -> type Letter numOrLetter . Opening_Parentheses parameter Closing_Parentheses statement
    (16) varForm -> Letter numOrLetter . Opening_Bracket Num Closing_Bracket
    (17) varForm -> Letter numOrLetter .
    (4) numOrLetter -> numOrLetter .

  ! shift/reduce conflict for Opening_Parentheses resolved as shift
  ! shift/reduce conflict for Opening_Bracket resolved as shift
  ! reduce/reduce conflict for Colon resolved using rule 4 (numOrLetter -> numOrLetter .)
  ! reduce/reduce conflict for Semicolon resolved using rule 4 (numOrLetter -> numOrLetter .)
  ! reduce/reduce conflict for Comma resolved using rule 4 (numOrLetter -> numOrLetter .)
    Opening_Parentheses shift and go to state 31
    Opening_Bracket shift and go to state 32
    Colon           reduce using rule 4 (numOrLetter -> numOrLetter .)
    Semicolon       reduce using rule 4 (numOrLetter -> numOrLetter .)
    Comma           reduce using rule 4 (numOrLetter -> numOrLetter .)

  ! Colon           [ reduce using rule 17 (varForm -> Letter numOrLetter .) ]
  ! Semicolon       [ reduce using rule 17 (varForm -> Letter numOrLetter .) ]
  ! Comma           [ reduce using rule 17 (varForm -> Letter numOrLetter .) ]
  ! Opening_Parentheses [ reduce using rule 4 (numOrLetter -> numOrLetter .) ]
  ! Opening_Bracket [ reduce using rule 4 (numOrLetter -> numOrLetter .) ]


state 24

    (10) varDeclaration -> type variableList Semicolon .

    void_KW         reduce using rule 10 (varDeclaration -> type variableList Semicolon .)
    Boolean_KW      reduce using rule 10 (varDeclaration -> type variableList Semicolon .)
    Character_KW    reduce using rule 10 (varDeclaration -> type variableList Semicolon .)
    Integer_KW      reduce using rule 10 (varDeclaration -> type variableList Semicolon .)
    char_KW         reduce using rule 10 (varDeclaration -> type variableList Semicolon .)
    bool_KW         reduce using rule 10 (varDeclaration -> type variableList Semicolon .)
    int_KW          reduce using rule 10 (varDeclaration -> type variableList Semicolon .)
    $end            reduce using rule 10 (varDeclaration -> type variableList Semicolon .)


state 25

    (12) variableList -> variableList Comma . varInitialization
    (14) varInitialization -> . varForm
    (15) varInitialization -> . varForm Colon Opening_Parentheses eachExpression Closing_Parentheses
    (16) varForm -> . Letter numOrLetter Opening_Bracket Num Closing_Bracket
    (17) varForm -> . Letter numOrLetter

    Letter          shift and go to state 34

    varInitialization              shift and go to state 33
    varForm                        shift and go to state 21

state 26

    (15) varInitialization -> varForm Colon . Opening_Parentheses eachExpression Closing_Parentheses

    Opening_Parentheses shift and go to state 35


state 27

    (26) function -> void_KW numOrLetter Opening_Parentheses parameter . Closing_Parentheses Opening_Bracket statement Closing_Bracket

    Closing_Parentheses shift and go to state 36


state 28

    (28) parameter -> listOfParameters .
    (30) listOfParameters -> listOfParameters . Semicolon paramTypeList

    Closing_Parentheses reduce using rule 28 (parameter -> listOfParameters .)
    Semicolon       shift and go to state 37


state 29

    (31) listOfParameters -> paramTypeList .

    Semicolon       reduce using rule 31 (listOfParameters -> paramTypeList .)
    Closing_Parentheses reduce using rule 31 (listOfParameters -> paramTypeList .)


state 30

    (32) paramTypeList -> type . paramList
    (33) paramList -> . paramList Comma paramId
    (34) paramList -> . paramId
    (37) paramId -> . Letter numOrLetter
    (38) paramId -> . Letter numOrLetter Opening_Bracket Closing_Bracket

    Letter          shift and go to state 40

    paramList                      shift and go to state 38
    paramId                        shift and go to state 39

state 31

    (27) function -> type Letter numOrLetter Opening_Parentheses . parameter Closing_Parentheses statement
    (28) parameter -> . listOfParameters
    (29) parameter -> .
    (30) listOfParameters -> . listOfParameters Semicolon paramTypeList
    (31) listOfParameters -> . paramTypeList
    (32) paramTypeList -> . type paramList
    (20) type -> . Boolean_KW
    (21) type -> . Character_KW
    (22) type -> . Integer_KW
    (23) type -> . char_KW
    (24) type -> . bool_KW
    (25) type -> . int_KW

    Closing_Parentheses reduce using rule 29 (parameter -> .)
    Boolean_KW      shift and go to state 8
    Character_KW    shift and go to state 9
    Integer_KW      shift and go to state 10
    char_KW         shift and go to state 11
    bool_KW         shift and go to state 12
    int_KW          shift and go to state 13

    type                           shift and go to state 30
    parameter                      shift and go to state 41
    listOfParameters               shift and go to state 28
    paramTypeList                  shift and go to state 29

state 32

    (16) varForm -> Letter numOrLetter Opening_Bracket . Num Closing_Bracket

    Num             shift and go to state 42


state 33

    (12) variableList -> variableList Comma varInitialization .

    Semicolon       reduce using rule 12 (variableList -> variableList Comma varInitialization .)
    Comma           reduce using rule 12 (variableList -> variableList Comma varInitialization .)


state 34

    (16) varForm -> Letter . numOrLetter Opening_Bracket Num Closing_Bracket
    (17) varForm -> Letter . numOrLetter
    (2) numOrLetter -> . Num
    (3) numOrLetter -> . Letter
    (4) numOrLetter -> . numOrLetter
    (5) numOrLetter -> .

    Num             shift and go to state 16
    Letter          shift and go to state 17
    Opening_Bracket reduce using rule 5 (numOrLetter -> .)
    Colon           reduce using rule 5 (numOrLetter -> .)
    Semicolon       reduce using rule 5 (numOrLetter -> .)
    Comma           reduce using rule 5 (numOrLetter -> .)

    numOrLetter                    shift and go to state 43

state 35
